infrastructure/base/traefik/dashboard-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-auth
  namespace: test
spec:
  basicAuth:
    removeHeader: true
    secret: traefik-dashboard-users
