infrastructure/base/traefik/ingressclass.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: true
  name: traefik
spec:
  controller: traefik.io/ingress-controller
