infrastructure/base/traefik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  template:
    metadata:
      labels:
        app: traefik
    spec:
      shareProcessNamespace: true
      serviceAccountName: traefik-ingress-controller
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: traefik
      nodeSelector:
        node-role.kubernetes.io/master: "true"
      containers:
        - image: traefik:2.6.0
          imagePullPolicy: IfNotPresent
          name: traefik
          readinessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: kubeapi
              containerPort: 6443
            - name: dns
              containerPort: 53
            - name: traefik
              containerPort: 8080
          resources:
            requests:
              memory: 50Mi
              cpu: 100m
            limits:
              memory: 50Mi
              cpu: 500m
          volumeMounts:
            - mountPath: /etc/traefik/traefik.yml
              name: config-static
              subPath: traefik.yaml
            - mountPath: /var/log
              name: logs
        - image: fischerscode/traefik-geologger-city:v1.4.120220315 # {"$imagepolicy": "flux-system:traefik-geologger-city"}
          imagePullPolicy: Always
          name: geologger
          volumeMounts:
            - mountPath: /var/log
              name: logs
          ports:
            - name: metrics
              containerPort: 8081
          securityContext:
            capabilities:
              add:
                - SYS_PTRACE
      imagePullSecrets:
        - name: docker-cred
      volumes:
        - name: config-static
          configMap:
            name: traefik-config-static
        - name: logs
          emptyDir: {}
