infrastructure/base/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: "${SVC_KUBERNETES_API_PUBLIC}"
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
    - port: 6443
      protocol: TCP
      name: kubeapi
    - port: 53
      protocol: TCP
      name: dns
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: "${SVC_KUBERNETES_API_PUBLIC}"
  externalTrafficPolicy: Local
  selector:
    app: traefik
  ports:
    - port: 53
      protocol: UDP
      name: dns
