infrastructure/base/traefik/dashboard-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: "Host(`traefik.${BASE_DOMAIN}`)"
      middlewares:
        - name: traefik-dashboard-auth
          namespace: overridden
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-dashboard-certificate
